--- a/src/app.scss
+++ b/src/app.scss
@@ -9,6 +9,10 @@
   padding: 0 30px;
   width: 690px;
 }
+.flex_row {
+  display: flex;
+  align-items: center;
+}
 .flex_row_c {
   display: flex;
   align-items: center;
@@ -55,4 +59,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+}
+.flex_column_sb {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+.text_ellipsis_one {
+  overflow: hidden;
+  text-overflow:ellipsis;
+  white-space: nowrap;
 }
