--- a/src/pages/home/songAupplyStation/index.scss
+++ b/src/pages/home/songAupplyStation/index.scss
@@ -2,15 +2,17 @@
   color: #333333;
   font-size: 28px;
   margin-left: 30px;
+  margin-top: 50px;
   .title {
     font-weight: bold;
   }
   .more {
     font-size: 22px;
-    color: #f5f5f5;
+    color: #cccccc;
+    padding-right: 30px;
   }
 }
-.recommand_area {
+.song_sheet_area {
   margin-top: 10px;
   .recommand_item {
     margin-left: 30px;
@@ -24,5 +26,8 @@
       color: #333333;
       font-size: 22px;
     }
+  }
+  .recommand_item:last-child {
+    padding-right: 30px;
   }
 }
