--- a/src/pages/home/musicHallPage/index.scss
+++ b/src/pages/home/musicHallPage/index.scss
@@ -80,3 +80,75 @@
     }
   }
 }
+.rank_content {
+  width: 680px;
+  .rank_img_song_item {
+    width: 100%;
+    position: relative;
+    z-index: 2;
+    border-radius: 20px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    &::before {
+      content: '';
+      display: block;
+      width: 100%;
+      height: 100%;
+      border-radius: 20px;
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      z-index: -1;
+      background: rgba(255, 255, 255, .3);
+      backdrop-filter: blur(10px);
+    }
+    .rank_cover {
+      width: 220px;
+      height: 220px;
+      border-radius: 20px;
+    }
+    .rank_songs {
+      width: 420px;
+      height: 180px;
+      padding: 20px 0;
+      color: #333333;
+      font-size: 30px;
+      .rank_song_items {
+        height: 130px;
+      }
+      .rank_song_item {
+        color: #333333;
+        font-size: 26px;
+        margin-bottom: 10px;
+        .rank_song_idx {
+          font-weight: bold;
+        }
+        .rank_song_message {
+          font-size: 26px;
+          margin-left: 30px;
+        }
+      }
+      .rank_song_item:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+.scroll_live {
+  width: 690px;
+  .scroll_live_item {
+    width: 200px;
+    margin-right: 10px;
+    Image {
+      width: 200px;
+      height: 240px;
+      border-radius: 20px;
+    }
+    Text {
+      color: #333333;
+      font-size: 24px;
+      margin-top: 10px;
+    }
+  }
+}
